--- a/server/package.json
+++ b/server/package.json
@@ -20,11 +20,16 @@
   "homepage": "https://github.com/DimaTeniuta/chat#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3",
+    "mongodb": "^5.1.0",
+    "mongoose": "^7.0.3"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.22"
   }
 }
