--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-template",
+  "name": "chat",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -21,7 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
-    "react-router-dom": "^6.6.1",
+    "react-router-dom": "^6.10.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
