--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,9 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.114",
     "@mui/material": "^5.11.2",
+    "axios": "^1.3.5",
+    "mobx": "^6.9.0",
+    "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
@@ -25,6 +28,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "^17.0.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
