--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,14 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.114",
     "@mui/material": "^5.11.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.5",
     "mobx": "^6.9.0",
     "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "yup": "^0.32.11"
   },
