--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "notistack": "^2.0.8",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@types/node": "^17.0.18",
     "@types/react": "^18.0.26",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
