--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,5 +1,5 @@
-PORT=
-DB_URL=
-CLIENT_URL=
-JWT_ACCESS_SECRET=
-JWT_REFRESH_SECRET=
+PORT=2300
+DB_URL="mongodb://mongo:27017" 
+CLIENT_URL=http://localhost:SOME_PORT 
+JWT_ACCESS_SECRET=ANY_STRING
+JWT_REFRESH_SECRET=ANY_STRING
