--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chat",
+  "name": "canban-board",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -7,8 +7,7 @@
     "build": "webpack --config webpack.prod",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-    "prepare": "husky install"
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -49,8 +48,6 @@
     "eslint-webpack-plugin": "^3.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "html-webpack-plugin": "^5.5.0",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.2.2",
     "prettier": "^1.17.1",
     "prettier-eslint": "^8.8.2",
     "style-loader": "^3.3.1",
@@ -59,10 +56,5 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.0",
     "webpack-merge": "^5.8.0"
-  },
-  "lint-staged": {
-    "**/*.{ts,tsx}": [
-      "npm run lint"
-    ]
   }
 }
